--- a/src/JfYu.UnitTests/JfYu.UnitTests.csproj
+++ b/src/JfYu.UnitTests/JfYu.UnitTests.csproj
@@ -10,18 +10,18 @@
 	
 	<ItemGroup> 
 		<PackageReference Include="Bogus" />
-		<PackageReference Include="coverlet.collector"/>
-		<PackageReference Include="coverlet.msbuild"/>
-		<PackageReference Include="EntityFramework"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json"/>
-		<PackageReference Include="Microsoft.Extensions.Logging"/>
-		<PackageReference Include="Microsoft.Extensions.Logging.Console"/>
-		<PackageReference Include="Microsoft.NET.Test.Sdk"/>
-		<PackageReference Include="Moq"/> 
-		<PackageReference Include="SharpZipLib"/>
-		<PackageReference Include="xunit"/>
-		<PackageReference Include="xunit.runner.visualstudio"/> 
+		<PackageReference Include="coverlet.collector" />
+		<PackageReference Include="coverlet.msbuild" />
+		<PackageReference Include="EntityFramework" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+		<PackageReference Include="Microsoft.Extensions.Logging" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="Moq" /> 
+		<PackageReference Include="SharpZipLib" />
+		<PackageReference Include="xunit" />
+		<PackageReference Include="xunit.runner.visualstudio" /> 
 	</ItemGroup>
 
 	<ItemGroup>
@@ -53,6 +53,10 @@
 		<None Update="Static\template.docx">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Office\Excel\" />
 	</ItemGroup>
 
 </Project>
