--- a/src/JfYu.UnitTests/JfYu.UnitTests.csproj
+++ b/src/JfYu.UnitTests/JfYu.UnitTests.csproj
@@ -2,13 +2,17 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>net481;net8.0;net9.0</TargetFrameworks>
-		<ImplicitUsings>enable</ImplicitUsings> 
+		<ImplicitUsings>enable</ImplicitUsings>
 		<IsPackable>false</IsPackable>
-		<IsTestProject>true</IsTestProject> 
+		<IsTestProject>true</IsTestProject>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
 	</PropertyGroup>
-	
-	<ItemGroup> 
+
+	<ItemGroup>
+	  <Compile Remove="Office\Excel\JfYuExcelReadTests.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Bogus" />
 		<PackageReference Include="coverlet.collector" />
 		<PackageReference Include="coverlet.msbuild" />
@@ -18,14 +22,15 @@
 		<PackageReference Include="Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
-		<PackageReference Include="Moq" /> 
+		<PackageReference Include="Moq" />
 		<PackageReference Include="SharpZipLib" />
 		<PackageReference Include="xunit" />
-		<PackageReference Include="xunit.runner.visualstudio" /> 
+		<PackageReference Include="xunit.runner.visualstudio" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\JfYu.Data\JfYu.Data.csproj" Condition="'$(TargetFramework)' == 'net8.0' Or '$(TargetFramework)' == 'net9.0'" />
+		<ProjectReference Include="..\JfYu.Office\JfYu.Office.csproj" Condition="'$(TargetFramework)' == 'net8.0' Or '$(TargetFramework)' == 'net9.0'" />
 		<ProjectReference Include="..\JfYu.RabbitMQ\JfYu.RabbitMQ.csproj" />
 		<ProjectReference Include="..\JfYu.Request\JfYu.Request.csproj" />
 	</ItemGroup>
@@ -53,10 +58,6 @@
 		<None Update="Static\template.docx">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Office\Excel\" />
 	</ItemGroup>
 
 </Project>
