--- a/src/JfYu.Office/JfYu.Office.csproj
+++ b/src/JfYu.Office/JfYu.Office.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>net8.0</TargetFrameworks>
 		<Version>8.1.2</Version> 
-		<Description>read/write microsoft office file</Description>
+		<Description>A powerful .NET library for Excel and Word document manipulation, supporting comprehensive read/write operations, multiple data sources, and template-based generation.</Description>
 		 
 	</PropertyGroup>
 	<ItemGroup>
