--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -31,9 +31,11 @@
 		<PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
 		<PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.10" />
 		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.10" />
-		<PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.10"/>
+		<PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.10" />
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
 		<PackageVersion Include="NPOI" Version="2.7.3" />
+		<PackageVersion Include="MessagePack" Version="3.1.4" />
+		<PackageVersion Include="StackExchange.Redis" Version="2.10.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Update="xunit" PrivateAssets="all" />
