--- a/src/JfYu.UnitTests/appsettings.json
+++ b/src/JfYu.UnitTests/appsettings.json
@@ -1,19 +1,31 @@
 {
-  "HttpTestOption": {
-    "Url": "http://127.0.0.1:8080"
-  },
-  "JfYuConnectionStrings": {
-    "DatabaseType": "Memory",
-    "ConnectionString": "Memory"
-  },
-  "RabbitMQ": {
-    "HostName": "127.0.0.1",
-    "Port": 5672,
-    "UserName": "guest",
-    "Password": "guest",
-    "RetryPolicy": {
-      "MaxRetryCount": 3,
-      "RetryDelay": 5000
+    "HttpTestOption": {
+        "Url": "http://127.0.0.1:8080"
+    },
+    "JfYuConnectionStrings": {
+        "DatabaseType": "Memory",
+        "ConnectionString": "Memory"
+    },
+    "RabbitMQ": {
+        "HostName": "127.0.0.1",
+        "Port": 5672,
+        "UserName": "guest",
+        "Password": "guest",
+        "RetryPolicy": {
+            "MaxRetryCount": 3,
+            "RetryDelay": 5000
+        }
+    },
+    "Redis": {
+        "EndPoints": [
+            {
+                "Host": "127.0.0.1",
+                "Port": 6379
+            }
+        ],
+        "Password": "",
+        "DbIndex": 0,
+        "Timeout": 5000,
+        "Ssl": false
     }
-  }
 }
