--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -36,6 +36,8 @@
 		<PackageVersion Include="NPOI" Version="2.7.3" />
 		<PackageVersion Include="MessagePack" Version="3.1.4" />
 		<PackageVersion Include="StackExchange.Redis" Version="2.10.1" />
+		<PackageVersion Include="Microsoft.CSharp" Version="4.7.0" />
+		<PackageVersion Include="System.Dynamic.Runtime" Version="4.3.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Update="xunit" PrivateAssets="all" />
