--- a/src/JfYu.UnitTests/appsettings.json
+++ b/src/JfYu.UnitTests/appsettings.json
@@ -27,5 +27,9 @@
         "DbIndex": 0,
         "Timeout": 5000,
         "Ssl": false
+    },
+    "WeChat": {
+        "AppId": "wx1234567890abcdef",
+        "Secret": "test_secret_key_for_unit_tests"
     }
 }
