--- a/src/JfYu.WeChat/JfYu.WeChat.csproj
+++ b/src/JfYu.WeChat/JfYu.WeChat.csproj
@@ -6,6 +6,10 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\JfYu.Request\JfYu.Request.csproj" />
-	</ItemGroup> 
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
 </Project>
 
