--- a/src/JfYu.WeChat/JfYu.WeChat.csproj
+++ b/src/JfYu.WeChat/JfYu.WeChat.csproj
@@ -8,8 +8,8 @@
 	  <ProjectReference Include="..\JfYu.Request\JfYu.Request.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Newtonsoft.Json" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" />
 	</ItemGroup>
 </Project>
 
