--- a/src/JfYu.RabbitMQ/JfYu.RabbitMQ.csproj
+++ b/src/JfYu.RabbitMQ/JfYu.RabbitMQ.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks> 
+		<TargetFrameworks>netstandard2.0;net8.0;net9.0;net10.0</TargetFrameworks> 
 		<Version>8.1.1</Version>
 		<Description>Lightweight RabbitMQ client wrapper with async publishing/consuming, retry with dead-letter support, and DI integration.</Description>
 	</PropertyGroup>
