--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,7 +6,9 @@
 		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageProjectUrl>https://github.com/jfwangncs/jfYu</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/jfwangncs/jfYu</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
