--- a/src/JfYu.Benchmark/JfYu.Benchmark.csproj
+++ b/src/JfYu.Benchmark/JfYu.Benchmark.csproj
@@ -5,6 +5,7 @@
 		<IsPackable>false</IsPackable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<SonarQubeExclude>true</SonarQubeExclude>
 	</PropertyGroup>
 
 	<ItemGroup>
