--- a/src/JfYu.Data/JfYu.Data.csproj
+++ b/src/JfYu.Data/JfYu.Data.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8.0</TargetFrameworks>	
+		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>	
 		<Version>8.3.0</Version>
 		<Description>EF Core read-write separation with multi-database support (SqlServer, MySql, Sqlite, InMemory)</Description>
 	</PropertyGroup>
