--- a/src/JfYu.Office/JfYu.Office.csproj
+++ b/src/JfYu.Office/JfYu.Office.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8.0</TargetFrameworks>
-		<Version>8.1.2</Version> 
+		<TargetFrameworks>netstandard2.0;net8.0;net9.0;net10.0</TargetFrameworks>
+		<Version>8.1.2</Version>
 		<Description>A powerful .NET library for Excel and Word document manipulation, supporting comprehensive read/write operations, multiple data sources, and template-based generation.</Description>
-		 
+
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Options" />
 		<PackageReference Include="NPOI" />
-	</ItemGroup>	
+		<PackageReference Include="Microsoft.CSharp" /> 
+	</ItemGroup>
 </Project>
