--- a/src/JfYu.UnitTests/JfYu.UnitTests.csproj
+++ b/src/JfYu.UnitTests/JfYu.UnitTests.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net481;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net481;net8.0;net9.0;net10.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);CA1873</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -13,21 +14,26 @@
 		<PackageReference Include="coverlet.msbuild" />
 		<PackageReference Include="EntityFramework" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" />
-		<PackageReference Include="Microsoft.Extensions.Logging" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" /> 
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="Moq" />
 		<PackageReference Include="SharpZipLib" />
 		<PackageReference Include="xunit" />
-		<PackageReference Include="xunit.runner.visualstudio" />
+		<PackageReference Include="xunit.runner.visualstudio" />	
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(TargetFramework)' == 'net481'">
+		<PackageReference Include="System.Data.SQLite" />
+		<PackageReference Include="System.Data.SQLite.Linq" />
+		<PackageReference Include="System.Data.SQLite.EF6" />
+	</ItemGroup> 
+
 	<ItemGroup>
-		<ProjectReference Include="..\JfYu.Data\JfYu.Data.csproj" Condition="'$(TargetFramework)' == 'net8.0' Or '$(TargetFramework)' == 'net9.0'" />
-		<ProjectReference Include="..\JfYu.Office\JfYu.Office.csproj" Condition="'$(TargetFramework)' == 'net8.0' Or '$(TargetFramework)' == 'net9.0'" />
+		<ProjectReference Include="..\JfYu.Data\JfYu.Data.csproj" Condition="'$(TargetFramework)' == 'net8.0' Or '$(TargetFramework)' == 'net9.0' Or '$(TargetFramework)' == 'net10.0'" />
+		<ProjectReference Include="..\JfYu.Office\JfYu.Office.csproj" />
 		<ProjectReference Include="..\JfYu.RabbitMQ\JfYu.RabbitMQ.csproj" />
-		<ProjectReference Include="..\JfYu.Redis\JfYu.Redis.csproj" Condition="'$(TargetFramework)' == 'net8.0' Or '$(TargetFramework)' == 'net9.0'" />
+		<ProjectReference Include="..\JfYu.Redis\JfYu.Redis.csproj" />
 		<ProjectReference Include="..\JfYu.Request\JfYu.Request.csproj" />
 		<ProjectReference Include="..\JfYu.WeChat\JfYu.WeChat.csproj" />
 	</ItemGroup>
@@ -37,6 +43,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Update="App.config">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 		<None Update="appsettings.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
